<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add_new_note">Add new Note</string>
    <string name="type_note_here">type here</string>
    <string name="to_define_the_note_color">note color</string>
    <string name="sub_title">SubTitle</string>
    <string name="note_title">Title</string>
    <string name="back_button">back button</string>
    <string name="done_button">done button</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="save_note">Save Note</string>
    <string name="search_icon">Search Icon</string>
    <string name="favorite">favorite</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="space">space</string>
    <string name="upload_image">Upload image</string>
    <string name="delete">Delete Note</string>
    <string name="what_s_in_your_mind">What\'s in your mind ?</string>
    <string name="color_my_note">Color My Note</string>
    <string name="MAPS_API_KEY">AIzaSyB5mJG589jOg17GrxXtkKVElz8becE5TrM</string>
    <string name="maps">Maps</string>
    <string name="map_info">info</string>
    <string name="save">save</string>
</resources>