<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/fav"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/user"
        android:title="@string/profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/space"
        android:title="@string/space"
        app:showAsAction="ifRoom"
        />

</menu>