<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="notes_update.UpdateNoteFragment"
    android:background="@color/background"
    >
    <ImageView
        android:id="@+id/update_back"
        android:padding="@dimen/dp13"
        android:layout_width="@dimen/dp50"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginVertical="@dimen/dp24"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/update_title"
        android:hint="@string/note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_back"
        tools:ignore="Autofill"
        style="@style/Title" />

    <EditText
        android:id="@+id/update_content"
        style="@style/Content"
        app:layout_constraintBottom_toTopOf="@id/update_the_uploaded_image"
        app:layout_constraintStart_toStartOf="@id/update_title"
        app:layout_constraintTop_toBottomOf="@id/update_title"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/update_the_uploaded_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/update_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/update_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp30"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_edit"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/update_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:clickable="true"
        android:contentDescription="@string/delete"
        android:focusable="true"
        android:src="@drawable/ic_delete"
        android:visibility="invisible"
        app:backgroundTint="@color/lightBlue"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/update_edit"
        app:layout_constraintEnd_toEndOf="@+id/update_edit"
        app:layout_constraintStart_toStartOf="@+id/update_edit"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/update_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:contentDescription="@string/upload_image"
        android:focusable="true"
        android:src="@drawable/ic_upload_image"
        android:visibility="invisible"
        app:backgroundTint="@color/lightBlue"
        app:layout_constraintBottom_toBottomOf="@+id/update_delete"
        app:layout_constraintEnd_toStartOf="@+id/update_delete"
        app:layout_constraintStart_toStartOf="@+id/update_color_me"
        app:layout_constraintTop_toTopOf="@+id/update_delete"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/update_color_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/lightBlue"
        android:src="@drawable/ic_color"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/update_edit"
        app:layout_constraintEnd_toStartOf="@+id/update_edit"
        app:layout_constraintTop_toTopOf="@+id/update_edit"
        android:contentDescription="@string/color_my_note" />

</androidx.constraintlayout.widget.ConstraintLayout>