<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="notes_create.CreateNoteFragment">

    <ImageView
        android:id="@+id/create_back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        style="@style/back_button" />

    <EditText
        android:id="@+id/create_title"
        style="@style/Title"
        android:hint="@string/note_title"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_back"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/create_content"
        style="@style/Content"
        app:layout_constraintBottom_toTopOf="@id/create_the_uploaded_image"
        app:layout_constraintStart_toStartOf="@id/create_title"
        app:layout_constraintTop_toBottomOf="@id/create_title"
        tools:ignore="Autofill" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/create_the_uploaded_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:riv_corner_radius="@dimen/dp16"
        android:layout_margin="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/create_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp30"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_edit"
        app:backgroundTint="@color/lightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:clickable="true"
        android:contentDescription="@string/upload_image"
        android:focusable="true"
        android:src="@drawable/ic_upload_image"
        android:visibility="invisible"
        app:backgroundTint="@color/lightBlue"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/create_edit"
        app:layout_constraintEnd_toEndOf="@+id/create_edit"
        app:layout_constraintStart_toStartOf="@+id/create_edit"
        app:tint="@color/white" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_color_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/lightBlue"
        android:src="@drawable/ic_color"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/create_edit"
        app:layout_constraintEnd_toStartOf="@+id/create_edit"
        app:layout_constraintTop_toTopOf="@+id/create_edit"
        android:contentDescription="@string/color_my_note" />

    <ImageView
        android:id="@+id/create_blue"
        style="@style/colors"
        android:background="@drawable/color1"
        app:layout_constraintEnd_toStartOf="@id/create_color_me"
        app:layout_constraintBottom_toBottomOf="@id/create_color_me"
        app:layout_constraintTop_toTopOf="@id/create_color_me"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/create_purple"
        style="@style/colors"
        android:background="@drawable/color2"
        app:layout_constraintEnd_toStartOf="@id/create_blue"
        app:layout_constraintBottom_toBottomOf="@id/create_color_me"
        app:layout_constraintTop_toTopOf="@id/create_color_me"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/create_lemon"
        style="@style/colors"
        android:background="@drawable/color3"
        app:layout_constraintEnd_toStartOf="@id/create_purple"
        app:layout_constraintBottom_toBottomOf="@id/create_color_me"
        app:layout_constraintTop_toTopOf="@id/create_color_me"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/create_pink"
        style="@style/colors"
        android:background="@drawable/color4"
        app:layout_constraintEnd_toStartOf="@id/create_lemon"
        app:layout_constraintBottom_toBottomOf="@id/create_color_me"
        app:layout_constraintTop_toTopOf="@id/create_color_me"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/create_yellow"
        style="@style/colors"
        android:background="@drawable/color5"
        app:layout_constraintEnd_toStartOf="@id/create_pink"
        app:layout_constraintBottom_toBottomOf="@id/create_color_me"
        app:layout_constraintTop_toTopOf="@id/create_color_me"
        android:layout_marginEnd="@dimen/dp8"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>




    <!--    <LinearLjayout-->
    <!--        android:id="@+id/create_bottom_sheet_button"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        style="@style/bottomSheet">-->

    <!--        <ImageView-->
    <!--            android:layout_width="80dp"-->
    <!--            android:layout_height="@dimen/dp8"-->
    <!--            android:src="@drawable/bottom_sheet_button"-->
    <!--            tools:ignore="ContentDescription" />-->

    <!--    </LinearLayout>-->
